--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-image-crop": "^10.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "tesseractocr": "^2.0.3",
     "web-vitals": "^2.1.4"
   },
